--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
     <head>
           <title>Tasks Diary</title>
+          <link href="styles/index.css" rel="stylesheet">
           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <nav class="navbar navbar-expand-sm bg-red navbar-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Tasks Diary </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -27,5 +28,7 @@
               </div>
             </div>
           </nav>
+  
+          <span class="rounded-circle">+</span>
     </body>
 </html>
