--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
     <head>
           <title>Tasks Diary</title>
+          <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+          <script src="scripts/index.js"></script>
           <link href="styles/index.css" rel="stylesheet">
           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    
     </head>
     <body>
         <nav class="navbar navbar-expand-sm bg-red navbar-dark">
@@ -29,6 +32,6 @@
             </div>
           </nav>
   
-          <span class="rounded-circle">+</span>
+          <span class="rounded-circle" id="add-task">+</span>
     </body>
 </html>
