--- a/index.html
+++ b/index.html
@@ -32,6 +32,30 @@
             </div>
           </nav>
   
-          <span class="rounded-circle" id="add-task">+</span>
+          <span class="rounded-circle" data-bs-toggle="modal" data-bs-target="#myModal">+</span>
+
+          <div class="modal" id="myModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Add Task</h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+
+      <!-- Modal body -->
+      <div class="modal-body">
+        
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+      </div>
+
+    </div>
+  </div>
+</div>
     </body>
 </html>
