--- a/index.html
+++ b/index.html
@@ -46,7 +46,16 @@
 
       <!-- Modal body -->
       <div class="modal-body">
-        
+        <div class="mb-3 mt-3">
+            <label for="task">Task Name</label>
+            <input type="text" class="form-control" id="text" placeholder="Enter taskname" name="task">
+          </div>
+          <div class="mb-3">
+            <label for="description">Description:</label>
+            <textarea class="form-control" rows="5" id="description" name="description" placeholder="Enter Description"></textarea>
+          </div>
+         
+          <button  class="btn btn-dark">Add Task</button>
       </div>
 
       <!-- Modal footer -->
