--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
       <div class="modal-body">
         <div class="mb-3 mt-3">
             <label for="task">Task Name</label>
-            <input type="text" class="form-control" id="text" placeholder="Enter taskname" name="task">
+            <input type="text" class="form-control" id="task" placeholder="Enter taskname" name="task">
           </div>
           <div class="mb-3">
             <label for="description">Description:</label>
             <textarea class="form-control" rows="5" id="description" name="description" placeholder="Enter Description"></textarea>
           </div>
          
-          <button  class="btn btn-dark">Add Task</button>
+          <button  class="btn btn-dark" id="store">Add Task</button>
       </div>
 
       <!-- Modal footer -->
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal" id="close">Close</button>
       </div>
 
     </div>
